Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.6, 10.2.8
-
Windows 10 pro, Windows Server 2012R2
Description
Server will crash after some time, after updating from 10.1.17. I think the same error is also been throwed on 10.1.23. I did a mysql_upgrade after replacing the binary files.
Probably this query is executed on a federated table.
[Note] C:\Program Files\MariaDB\bin\mysqld: ready for connections. |
Version: '10.2.6-MariaDB' socket: '' port: 3306 mariadb.org binary distribution |
170530 13:08:32 [ERROR] mysqld got exception 0xc0000005 ; |
This could be because you hit a bug. It is also possible that this binary |
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs |
|
|
We will try our best to scrape up some info that will hopefully help |
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail. |
|
|
Server version: 10.2.6-MariaDB |
key_buffer_size=402653184 |
read_buffer_size=2097152 |
max_used_connections=11 |
max_threads=65537 |
thread_count=9 |
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 400090 K bytes of memory |
Hope that's ok; if not, decrease some variables in the equation. |
|
|
Thread pointer: 0x2c57c7de8c8 |
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went |
terribly wrong...
|
mysqld.exe!Query_cache_block::headers_len()[sql_cache.cc:843] |
mysqld.exe!Query_cache_block::data()[sql_cache.cc:850] |
mysqld.exe!Query_cache::insert()[sql_cache.cc:1096] |
mysqld.exe!query_cache_insert()[sql_cache.cc:1059] |
mysqld.exe!net_real_write()[net_serv.cc:622] |
mysqld.exe!net_flush()[net_serv.cc:378] |
mysqld.exe!net_write_command()[net_serv.cc:514] |
mysqld.exe!cli_advanced_command()[client.c:708] |
mysqld.exe!mysql_send_query()[client.c:4061] |
mysqld.exe!mysql_real_query()[client.c:4071] |
ha_federated.dll!ha_federated::real_query()[ha_federated.cc:3209] |
ha_federated.dll!ha_federated::info()[ha_federated.cc:2833] |
mysqld.exe!TABLE_LIST::fetch_number_of_rows()[table.cc:7920] |
mysqld.exe!make_join_statistics()[sql_select.cc:3802] |
mysqld.exe!JOIN::optimize_inner()[sql_select.cc:1508] |
mysqld.exe!JOIN::optimize()[sql_select.cc:1085] |
mysqld.exe!mysql_select()[sql_select.cc:3652] |
mysqld.exe!handle_select()[sql_select.cc:361] |
mysqld.exe!execute_sqlcom_select()[sql_parse.cc:6431] |
mysqld.exe!mysql_execute_command()[sql_parse.cc:3448] |
mysqld.exe!sp_instr_stmt::exec_core()[sp_head.cc:3236] |
mysqld.exe!sp_lex_keeper::reset_lex_and_exec_core()[sp_head.cc:2997] |
mysqld.exe!sp_instr_stmt::execute()[sp_head.cc:3150] |
mysqld.exe!sp_head::execute()[sp_head.cc:1323] |
mysqld.exe!sp_head::execute_procedure()[sp_head.cc:2112] |
mysqld.exe!do_execute_sp()[sql_parse.cc:2883] |
mysqld.exe!mysql_execute_command()[sql_parse.cc:5787] |
mysqld.exe!mysql_parse()[sql_parse.cc:7879] |
mysqld.exe!dispatch_command()[sql_parse.cc:1814] |
mysqld.exe!do_command()[sql_parse.cc:1361] |
mysqld.exe!threadpool_process_request()[threadpool_common.cc:346] |
mysqld.exe!tp_callback()[threadpool_common.cc:192] |
ntdll.dll!TpReleaseWork()
|
ntdll.dll!TpReleaseWork()
|
KERNEL32.DLL!BaseThreadInitThunk()
|
ntdll.dll!RtlUserThreadStart()
|
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x2c57d791a20): SELECT |
|
|
s.`id`,
|
|
|
s.`active`,
|
|
|
CAST(AES_DECRYPT(s.`name`, NAME_CONST('i_name_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `name`, |
|
|
CAST(AES_DECRYPT(s.`visitaddress`, NAME_CONST('i_visitaddress_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `visitaddress`, |
|
|
CAST(AES_DECRYPT(s.`visitzipcode`, NAME_CONST('i_visitzipcode_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `visitzipcode`, |
|
|
CAST(AES_DECRYPT(s.`visitcity`, NAME_CONST('i_visitcity_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `visitcity`, |
|
|
CAST(AES_DECRYPT(s.`visitcountry`, NAME_CONST('i_visitcountry_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `visitcountry`, |
|
|
CAST(AES_DECRYPT(s.`invoicename`, NAME_CONST('i_invoicename_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `invoicename`, |
|
|
CAST(AES_DECRYPT(s.`invoiceaddress`, NAME_CONST('i_invoiceaddress_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `invoiceaddress`, |
|
|
CAST(AES_DECRYPT(s.`invoicezipcode`, NAME_CONST('i_invoicezipcode_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `invoicezipcode`, |
|
|
CAST(AES_DECRYPT(s.`invoicecity`, NAME_CONST('i_invoicecity_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `invoicecity`, |
|
|
CAST(AES_DECRYPT(s.`invoicecountry`, NAME_CONST('i_invoicecountry_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `invoicecountry`, |
|
|
CAST(AES_DECRYPT(s.`invoiceemail`, NAME_CONST('i_invoiceemail_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `invoiceemail`, |
|
|
CAST(AES_DECRYPT(s.`phone`, NAME_CONST('i_phone_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `phone`, |
|
|
CAST(AES_DECRYPT(s.`email`, NAME_CONST('i_email_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `email`, |
|
|
s.`reference`,
|
|
|
CAST(AES_DECRYPT(s.`brincode`, NAME_CONST('i_brincode_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `brincode`, |
|
|
s.`dependancecode`,
|
|
|
CAST(AES_DECRYPT(s.`lrk`, NAME_CONST('i_lrk_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `lrk`, |
|
|
CAST(AES_DECRYPT(s.`contactperson`, NAME_CONST('i_contactperson_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `contactperson`, |
|
|
s.`isdemo`,
|
|
|
CAST(AES_DECRYPT(s.`management`, NAME_CONST('i_management_key',_utf8'EncryptKey' COLLATE 'utf8_general_ci')) AS CHAR CHARACTER SET utf8) AS `management`, |
|
|
s.`createdby`,
|
|
|
s.`dtcreated`,
|
|
|
s.`lastupdatedby`,
|
|
|
s.`dtlastupdated`
|
|
|
FROM `school` s
|
|
|
WHERE s.id = NAME_CONST('i_id',1) |
Connection ID (thread ID): 71 |
Status: NOT_KILLED
|
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on |
Attachments
Issue Links
- relates to
-
MDEV-12725 select on federated table crashes server
-
- Closed
-
-
MDEV-13163 10.1.24-MariaDB crash report
-
- Closed
-
-
MDEV-14272 Mariadb crashes with signal 11 when using federatedx engine and galera
-
- Closed
-
-
MDEV-14414 mysqld got signal 11
-
- Closed
-
-
MDEV-15617 [ERROR] mysqld got signal 11 ;
-
- Closed
-