MDEV-12951 Server crash [mysqld got exception 0xc0000005]

Same as MDEV-12725 but for federated (not X).
Set and reset mysql.net->thd appropriately.