storage/federated/ha_federated.cc
@@ -2980,6 +2980,9 @@ int ha_federated::reset(void)
   }
   reset_dynamic(&results);
 
+  if (mysql)
+    mysql->net.thd= NULL;
+
   return 0;
 }
 
@@ -3200,11 +3203,13 @@ int ha_federated::real_query(const char *query, size_t length)
   int rc= 0;
   DBUG_ENTER("ha_federated::real_query");
 
+  if (!query || !length)
+    goto end;
+
   if (!mysql && (rc= real_connect()))
     goto end;
 
-  if (!query || !length)
-    goto end;
+  mysql->net.thd= table->in_use;
 
   rc= mysql_real_query(mysql, query, (uint) length);
   
